Error writing frame #38422

Closed
opened 2014-01-31 18:09:29 +01:00 by brothermechanic · 18 comments

System Information
Operating system and graphics card
gentoo ~amd64 Asus g75vw gtx660m
ffmpeg-2.1.2
Blender Version
Broken: in my git builds
Worked: in builder builds

Short description of error
Hi
When i select format to "Quicktime" and audio codec to "AAC" i get tis error after 19-22 frames
"Error writing frame"

**System Information** Operating system and graphics card gentoo ~amd64 Asus g75vw gtx660m ffmpeg-2.1.2 **Blender Version** Broken: in my git builds Worked: in builder builds **Short description of error** Hi When i select format to "Quicktime" and audio codec to "AAC" i get tis error after 19-22 frames "Error writing frame"

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic

Added subscriber: @Sergey

Added subscriber: @Sergey

This is rather lack of information needed for troubleshooting. Please include:

  • system-info.txt generated by Help->System Info
  • output of blender --debug-ffmpeg
  • .blend file which is set up in a way that gives the issue
This is rather lack of information needed for troubleshooting. Please include: - system-info.txt generated by `Help->System Info` - output of `blender --debug-ffmpeg` - .blend file which is set up in a way that gives the issue

Hi, thank you for reply, Sergey!
I open blender vse > load video (no matter what kind of) > QT+AAC > error after 19 frame (always)
http://i.imgur.com/q4pqoyk.png

system-info.txt
http://www.pasteall.org/49260
blender --debug-ffmpeg
http://bpaste.net/show/175050/

Hi, thank you for reply, Sergey! I open blender vse > load video (no matter what kind of) > QT+AAC > error after 19 frame (always) http://i.imgur.com/q4pqoyk.png system-info.txt http://www.pasteall.org/49260 blender --debug-ffmpeg http://bpaste.net/show/175050/

It doesn't seem to be FFmpeg-2.1.2 from the system info. Where did you get your FFmpeg from?

It doesn't seem to be FFmpeg-2.1.2 from the system info. Where did you get your FFmpeg from?

Sorry, it's my mistake, of course it is a git build from http://git.videolan.org/?p=ffmpeg.git;a=summary

Sorry, it's my mistake, of course it is a git build from http://git.videolan.org/?p=ffmpeg.git;a=summary

Tested with more recent FFmpeg from their official repo (hash 0e97ec54dea9330041f8a7ed30e4cd9a53c60e11, repo git://source.ffmpeg.org/ffmpeg.git) and couldn't have reproduced the issue.

Also, we're not officially supporting development versions of 3d part libs, so unless you've got the same issue with FFmpeg-2.1.3 i don't consider this is a bug. We couldn't guarantee there's no issues in 3d part libs source.

Tested with more recent FFmpeg from their official repo (hash 0e97ec54dea9330041f8a7ed30e4cd9a53c60e11, repo git://source.ffmpeg.org/ffmpeg.git) and couldn't have reproduced the issue. Also, we're not officially supporting development versions of 3d part libs, so unless you've got the same issue with FFmpeg-2.1.3 i don't consider this is a bug. We couldn't guarantee there's no issues in 3d part libs source.

Hi
I understand. I use git version because it has vidstab support.
I alredy have the issue.

is git:*source.ffmpeg.org/ffmpeg.git full analog repository of http:*git.videolan.org/?p=ffmpeg.git;a=summary?

Hi I understand. I use git version because it has vidstab support. I alredy have the issue. is git:*source.ffmpeg.org/ffmpeg.git full analog repository of http:*git.videolan.org/?p=ffmpeg.git;a=summary?

Does the issue happen with latest stable release of FFmpeg?

Does the issue happen with latest stable release of FFmpeg?

yes

yes

Then please provide:

  • config.log from FFmpeg 2.1.3 (official release, NOT git or so) compilation
  • Updated system-info.txt form blender
  • Output of blender --debug-ffmpeg
  • Sample .blend and image sequence/video demonstrating the issue (it is crucial to have since it might be some hidden option affecting on the result, also might depend on input video type)
Then please provide: - config.log from FFmpeg 2.1.3 (official release, NOT git or so) compilation - Updated system-info.txt form blender - Output of blender --debug-ffmpeg - Sample .blend and image sequence/video demonstrating the issue (it is crucial to have since it might be some hidden option affecting on the result, also might depend on input video type)

i prepare all stuff here http://yadi.sk/d/SQi4P5lYHvAot

Thank you for the interest

i prepare all stuff here http://yadi.sk/d/SQi4P5lYHvAot Thank you for the interest
Sergey Sharybin self-assigned this 2014-02-17 09:30:28 +01:00

Managed to reproduce. You're using different AAC library than we're using for release (you're using libvo-aacenc which makes FFmpeg be GPL3+, we don't use it to keep it GPL2+).

Managed to reproduce. You're using different AAC library than we're using for release (you're using libvo-aacenc which makes FFmpeg be GPL3+, we don't use it to keep it GPL2+).

This issue was referenced by blender/blender-addons-contrib@a61e3b9a9e

This issue was referenced by blender/blender-addons-contrib@a61e3b9a9e335fdccf64fbdc942c4fd17b25646e

This issue was referenced by a61e3b9a9e

This issue was referenced by a61e3b9a9e335fdccf64fbdc942c4fd17b25646e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a61e3b9a9e.

Closed by commit a61e3b9a9e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38422
No description provided.