Fix T38422: Error writing AAC frame when using FFmpeg compiled with vo_aacenc

Issue was caused by missing GLOBALHEADER flag set for audio stream.

Also made it so frame is getting filled with default, that's what
happening in ffmpeg.c.